--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
       src="https://kit.fontawesome.com/f4f3af44e3.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&family=Josefin+Sans:wght@100;400;700&family=Molle&family=Rajdhani&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div class="hero">
+      <p>Hello, I'm</p>
+      <h1>Viviana Milone</h1>
+      <h2>Front-End Developer based in Italy</h2>
+      <div>
+        <a href="#" class="btn btn-branding"> Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
-\
