--- a/index.html
+++ b/index.html
@@ -32,10 +32,65 @@
     <div class="hero">
       <p>Hello, I'm</p>
       <h1>Viviana Milone</h1>
-      <h2>Front-End Developer based in Italy</h2>
+      <h2 class="mb-5">Front-End Developer based in Italy</h2>
       <div>
         <a href="#" class="btn btn-branding"> Contact me</a>
       </div>
+    </div>
+    <p class="text-center m-5">Featured Projects created during my learning journey</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="./images/dogapp.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+          <h2 class="mb-5">Dogs Homepage</h2>
+          <p class="mb-5 text-muted">
+            Each year, it's estimated that more than one million adoptable dogs
+            and cats are euthanized in the United States, simply because too
+            many pets come into shelters and too few people consider adoption
+            when looking for a pet. The number of euthanized animals could be
+            reduced dramatically if more people adopt pets instead of buying
+            them. When you adopt dogs and cats, you save a loving animal by
+            making them part of your family and open up shelter space for
+            another animal who might desperately need it.
+          </p>
+          <a href class="btn btn-branding-outline">Launch Dog's website</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+          <h2 class="mb-5">Weather App</h2>
+          <p class="mb-5 text-muted">
+            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+          </p>
+          <a href class="btn btn-branding-outline">Launch Weather-App</a>
+          </div>
+          </div>
+          <div class="col d-none d-lg-block">
+          <img src="./images/weatherapp.png
+          " class="img-fluid" alt="" />
+        </div>
+        </div>
+        <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="./images/dogapp.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+          <h2 class="mb-5">Dictionary App</h2>
+          <p class="mb-5 text-muted">
+            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+          </p>
+          <a href class="btn btn-branding-outline">Launch Dictionary App</a>
+          </div>
+        </div>
+      </div>
+      </div>
+      
     </div>
   </body>
 </html>
