added nav-bar and styled

--- a/about.html
+++ b/about.html
@@ -29,13 +29,39 @@
     />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./">
+          <img src="./images/logo.png" alt="" class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="./">Home</a>
+            <a class="nav-link active" href="./about.html">About</a>
+            <a class="nav-link" href="./work.html">Work</a>
+            <a class="nav-link" href="./contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
             <h1 class="mb-4">About Myself</h1>
             <h2 class="mb-4">Frontend Developer, based in Italy</h2>
-            <p class="mb-5">
+            <p class="mb-5 about-me">
               I was always passionate about languages and during the high school
               I learned English, German and French. I graduated at the
               University of La Sapienza Rome in Marketing and Communication.
