--- a/index.html
+++ b/index.html
@@ -108,7 +108,32 @@
         </div>
       </div>
       </div>
-      
+      <footer>
+        <div class="contact-box justify-content-between md-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">
+              Let's work together!
+            </p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:viviana.milone3@gmail.com" class="email-link">viviana.milone@gmail.com</a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.linkedin.com/in/viviana-milone-9149a56/" target="_blank">          
+            <i class="fab fa-linkedin" aria-hidden="true"></i> </a>
+            <a href="https://github.com/VivianaCodes" target="_blank">
+              <i class="fab fa-github" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/viviana.milone3/" target="_blank">
+              <i class="fab fa-instagram" aria-hidden="true"></i>
+            </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
