added footer to all files and added links to the buttons

--- a/about.html
+++ b/about.html
@@ -89,6 +89,56 @@
           <img src="./images/me.jpg" alt class="img-fluid rounded" />
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between md-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together!</p>
+          </div>
+          <div>
+            <a href="./contact.html" class="btn btn-branding mt-3"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:viviana.milone3@gmail.com" class="email-link"
+            >viviana.milone@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.linkedin.com/in/viviana-milone-9149a56/"
+            target="_blank"
+            title="Linkedin"
+          >
+            <i class="fab fa-linkedin" aria-hidden="true"></i>
+          </a>
+          <a
+            href="https://github.com/VivianaCodes"
+            target="_blank"
+            title="Github"
+          >
+            <i class="fab fa-github" aria-hidden="true"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/viviana.milone3/"
+            target="_blank"
+            title="Instagram"
+          >
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
+        </div>
+        <p class="text-center mt-4">
+          This project was coded by Viviana Milone and it's
+          <a
+            href="https://github.com/VivianaCodes/portfolio-project"
+            target="_blank"
+            title="Github Project"
+            >open-sourced</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
