--- a/index.html
+++ b/index.html
@@ -30,23 +30,31 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="./">
-      <img src="./images/logo.png" alt="" class="logo"/>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="./">Home</a>
-        <a class="nav-link" href="./about.html">About</a>
-        <a class="nav-link" href="./work.html">Work</a>
-        <a class="nav-link" href="./contact.html">Contact</a>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./">
+          <img src="./images/logo.png" alt="" class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="./">Home</a>
+            <a class="nav-link" href="./about.html">About</a>
+            <a class="nav-link" href="./work.html">Work</a>
+            <a class="nav-link" href="./contact.html">Contact</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</nav>
+    </nav>
     <div class="hero">
       <p>Hello, I'm</p>
       <h1>Viviana Milone</h1>
@@ -55,7 +63,9 @@
         <a href="#" class="btn btn-branding"> Contact me</a>
       </div>
     </div>
-    <p class="text-center m-5">Featured Projects created during my learning journey</p>
+    <p class="text-center mt-5">
+      Featured Projects created during my learning journey
+    </p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
@@ -63,76 +73,109 @@
         </div>
         <div class="col">
           <div class="project-description">
-          <h2 class="mb-5">Dogs Homepage</h2>
-          <p class="mb-5 text-muted">
-            Each year, it's estimated that more than one million adoptable dogs
-            and cats are euthanized in the United States, simply because too
-            many pets come into shelters and too few people consider adoption
-            when looking for a pet. The number of euthanized animals could be
-            reduced dramatically if more people adopt pets instead of buying
-            them. When you adopt dogs and cats, you save a loving animal by
-            making them part of your family and open up shelter space for
-            another animal who might desperately need it.
-          </p>
-          <a href class="btn btn-branding-outline">Launch Dog's website</a>
+            <h2 class="mb-5">Dogs Homepage</h2>
+            <p class="mb-5 text-muted">
+              Each year, it's estimated that more than one million adoptable
+              dogs and cats are euthanized in the United States, simply because
+              too many pets come into shelters and too few people consider
+              adoption when looking for a pet. The number of euthanized animals
+              could be reduced dramatically if more people adopt pets instead of
+              buying them. When you adopt dogs and cats, you save a loving
+              animal by making them part of your family and open up shelter
+              space for another animal who might desperately need it.
+            </p>
+            <a href class="btn btn-branding-outline">Launch Dog's website</a>
           </div>
         </div>
       </div>
       <div class="row mb-5">
         <div class="col">
           <div class="project-description">
-          <h2 class="mb-5">Weather App</h2>
-          <p class="mb-5 text-muted">
-            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-          </p>
-          <a href class="btn btn-branding-outline">Launch Weather-App</a>
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean.
+            </p>
+            <a href class="btn btn-branding-outline">Launch Weather-App</a>
           </div>
-          </div>
-          <div class="col d-none d-lg-block">
-          <img src="./images/weatherapp.png
-          " class="img-fluid" alt="" />
         </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="./images/weatherapp.png
+          "
+            class="img-fluid"
+            alt=""
+          />
         </div>
-        <div class="row mb-5">
+      </div>
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img src="./images/dogapp.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
-          <h2 class="mb-5">Dictionary App</h2>
-          <p class="mb-5 text-muted">
-            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-          </p>
-          <a href class="btn btn-branding-outline">Launch Dictionary App</a>
+            <h2 class="mb-5">Dictionary App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean.
+            </p>
+            <a href class="btn btn-branding-outline">Launch Dictionary App</a>
           </div>
         </div>
-      </div>
       </div>
       <footer>
         <div class="contact-box justify-content-between md-5 d-none d-md-flex">
           <div>
             <h4>Work Inquiry</h4>
-            <p class="text-muted">
-              Let's work together!
-            </p>
+            <p class="text-muted">Let's work together!</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a href="./contact.html" class="btn btn-branding mt-3"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:viviana.milone3@gmail.com" class="email-link">viviana.milone@gmail.com</a>
+          <a href="mailto:viviana.milone3@gmail.com" class="email-link"
+            >viviana.milone@gmail.com</a
+          >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.linkedin.com/in/viviana-milone-9149a56/" target="_blank">          
-            <i class="fab fa-linkedin" aria-hidden="true"></i> </a>
-            <a href="https://github.com/VivianaCodes" target="_blank">
-              <i class="fab fa-github" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.instagram.com/viviana.milone3/" target="_blank">
-              <i class="fab fa-instagram" aria-hidden="true"></i>
-            </a>
+          <a
+            href="https://www.linkedin.com/in/viviana-milone-9149a56/"
+            target="_blank"
+            title="Linkedin"
+          >
+            <i class="fab fa-linkedin" aria-hidden="true"></i>
+          </a>
+          <a
+            href="https://github.com/VivianaCodes"
+            target="_blank"
+            title="Github"
+          >
+            <i class="fab fa-github" aria-hidden="true"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/viviana.milone3/"
+            target="_blank"
+            title="Instagram"
+          >
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
         </div>
+        <p class="text-center mt-4">
+          This project was coded by Viviana Milone and it's
+          <a
+            href="https://github.com/VivianaCodes/portfolio-project"
+            target="_blank"
+            title="Github Project"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
