Added real content and finished SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Viviana Milone</title>
+    <title>Coding Portfolio - Viviana Milone</title>
+    <meta
+      name="description"
+      content="This is the Coding Portfolio Website of Viviana Milone.Project was coded as part of the final work of the SheCodes Pro Webshop"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -56,11 +60,11 @@
       </div>
     </nav>
     <div class="hero">
-      <p>Hello, I'm</p>
+      <p class="m-3">Hello, I'm</p>
       <h1>Viviana Milone</h1>
       <h2 class="mb-5">Front-End Developer based in Italy</h2>
       <div>
-        <a href="#" class="btn btn-branding"> Contact me</a>
+        <a href="#" class="btn btn-branding mb-3"> Contact me</a>
       </div>
     </div>
     <p class="text-center mt-5">
@@ -69,20 +73,21 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="./images/dogapp.png" class="img-fluid" alt="" />
+          <img
+            src="./images/dogapp.png"
+            class="img-fluid"
+            alt="Dog Website Project"
+          />
         </div>
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Dogs Homepage</h2>
             <p class="mb-5 text-muted">
-              Each year, it's estimated that more than one million adoptable
-              dogs and cats are euthanized in the United States, simply because
-              too many pets come into shelters and too few people consider
-              adoption when looking for a pet. The number of euthanized animals
-              could be reduced dramatically if more people adopt pets instead of
-              buying them. When you adopt dogs and cats, you save a loving
-              animal by making them part of your family and open up shelter
-              space for another animal who might desperately need it.
+              This was my first project during my SheCodes Basic Webshop. It was
+              an amazing experience as I was able to see was i was building and
+              I was pretty shocked for all the thing that I learned in just 3
+              weeks. This project made me want to continue learning and go on
+              with my studies.
             </p>
             <a href class="btn btn-branding-outline">Launch Dog's website</a>
           </div>
@@ -93,12 +98,17 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean.
+              My first functioning website using APIs. We learned so much during
+              the SheCodes Plus Workshop. This made a reality check to all the
+              things we were able to learn.
             </p>
-            <a href class="btn btn-branding-outline">Launch Weather-App</a>
+            <a
+              href="https://teal-pudding-5c2552.netlify.app/"
+              class="btn btn-branding-outline"
+              target="_blank"
+              title="Weather Project"
+              >Launch Weather-App</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -106,22 +116,24 @@
             src="./images/weatherapp.png
           "
             class="img-fluid"
-            alt=""
+            alt="Weather App Project"
           />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="./images/dogapp.png" class="img-fluid" alt="" />
+          <img
+            src="./images/dogapp.png"
+            class="img-fluid"
+            alt="Dictionary App Project"
+          />
         </div>
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Dictionary App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean.
+              This project is not yet done. This will be planned and produced
+              during the next step of my Coding journey!
             </p>
             <a href class="btn btn-branding-outline">Launch Dictionary App</a>
           </div>
