--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Viviana Milone</title>
+    <title>Contact - Viviana Milone</title>
+    <meta
+      name="description"
+      content="This is the Coding Portfolio Website of Viviana Milone.Project was coded as part of the final work of the SheCodes Pro Webshop"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,7 +36,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="./">
-          <img src="./images/logo.png" alt="" class="logo" />
+          <img src="./images/logo.png" alt="VM Logo" class="logo" />
         </a>
         <button
           class="navbar-toggler"
@@ -47,10 +51,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="./">Home</a>
-            <a class="nav-link" href="./about.html">About</a>
-            <a class="nav-link" href="./work.html">Work</a>
-            <a class="nav-link active" href="./contact.html">Contact</a>
+            <a class="nav-link" aria-current="page" href="./" title="Homepage"
+              >Home</a
+            >
+            <a class="nav-link" href="./about.html" title="About">About</a>
+            <a class="nav-link" href="./work.html" title="Work">Work</a>
+            <a class="nav-link active" href="./contact.html" title="Contact"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -86,7 +94,10 @@
             <p class="text-muted">Let's work together!</p>
           </div>
           <div>
-            <a href="./contact.html" class="btn btn-branding mt-3"
+            <a
+              href="./contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact"
               >Contact me</a
             >
           </div>
