--- a/work.html
+++ b/work.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Viviana Milone</title>
+    <title>Coding Work - Viviana Milone</title>
+    <meta
+      name="description"
+      content="This is the Coding Portfolio Website of Viviana Milone.Project was coded as part of the final work of the SheCodes Pro Webshop"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,10 +51,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="./">Home</a>
-            <a class="nav-link" href="./about.html">About</a>
-            <a class="nav-link active" href="./work.html">Work</a>
-            <a class="nav-link" href="./contact.html">Contact</a>
+            <a class="nav-link" aria-current="page" href="./" title="Homepage"
+              >Home</a
+            >
+            <a class="nav-link" href="./about.html" title="Aboput">About</a>
+            <a class="nav-link active" href="./work.html" title="Work">Work</a>
+            <a class="nav-link" href="./contact.html" title="Contact"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -60,7 +68,11 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="./images/dogapp.png" class="img-fluid mb-3 rounded" alt />
+            <img
+              src="./images/dogapp.png"
+              class="img-fluid mb-3 rounded"
+              alt="Dog Website Project"
+            />
             <h3 class="text-center m-0">Dog Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
@@ -68,7 +80,7 @@
             <img
               src="./images/weatherapp.png"
               class="img-fluid mb-3 rounded"
-              alt
+              alt=" Weather App Project"
             />
             <h3 class="text-center m-0">Weather Project</h3>
             <p class="text-center text-muted">
@@ -76,7 +88,11 @@
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="./images/yogurt.png" class="img-fluid mb-3 rounded" alt />
+            <img
+              src="./images/yogurt.png"
+              class="img-fluid mb-3 rounded"
+              alt="Dictionary App Project"
+            />
             <h3 class="text-center m-0">Dictionary Project</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
           </div>
@@ -89,7 +105,10 @@
             <p class="text-muted">Let's work together!</p>
           </div>
           <div>
-            <a href="./contact.html" class="btn btn-branding mt-3"
+            <a
+              href="./contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact"
               >Contact me</a
             >
           </div>
