Adjusted image and Button

--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
           <img
             src="./images/me.jpg"
             alt="Viviana Milone Photo"
-            class="img-fluid rounded"
+            class="img-fluid rounded mt-5"
           />
         </div>
       </div>
