--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
       </div>
     </nav>
     <div class="hero">
-      <p class="m-3">Hello, I'm</p>
+      <p>Hello, I'm</p>
       <h1>Viviana Milone</h1>
       <h2 class="mb-5">Front-End Developer based in Italy</h2>
       <div>
-        <a href="#" class="btn btn-branding mb-3"> Contact me</a>
+        <a href="./contact.html" class="btn btn-branding mb-3" title="Contact">
+          Contact me</a
+        >
       </div>
     </div>
     <p class="text-center mt-5">
